fixed layout-shift in sign up

--- a/src/pages/sign-up-form.scss
+++ b/src/pages/sign-up-form.scss
@@ -12,65 +12,70 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
-  .sign-up-email {
-    height: 2rem;
-    border: 3px solid #ccc;
-    border-radius: 4px;
-    margin-bottom: -.4rem;
-    padding: 0.5rem;
-    font-size: 1rem;
-    // width: 100%;
-    color: var(--accent-backround);
+  .sign-up-form {
+    @extend .login-form;
+    top: 42%;
+    .sign-up-email {
+      height: 2rem;
+      border: 3px solid #ccc;
+      border-radius: 4px;
+      margin-bottom: -0.4rem;
+      padding: 0.5rem;
+      font-size: 1rem;
+      // width: 100%;
+      color: var(--accent-backround);
 
-    &:focus {
-      border-color: var(--primary-color);
-      outline: none; /* remove the default blue outline */
-    }
-  }
-
-  .sign-up-password {
-    height: 2rem;
-    border: 3px solid #ccc;
-    border-radius: 4px;
-    margin-bottom: 0.5rem;
-    padding: 0.5rem;
-    font-size: 1rem;
-    // width: 100%;
-    color: var(--accent-backround);
-
-    &:focus {
-      border-color: var(--primary-color);
-      outline: none; /* remove the default blue outline */
-    }
-  }
-
-  .validation {
-    margin-top: 9px;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    color: #9e9d9d;
-    .identifier {
-      color: var(--secondary-color);
-    }
-    p {
-      margin: 0;
-      font-size: 15px;
-    }
-  }
-
-  .sign-up-toggle-password-visibility {
-    position: absolute;
-    top: 47%;
-    width: 2rem;
-    height: 2rem;
-    left: 90%;
-    font-size: 20px;
-
-    .hide {
-      color: var(--secondary-backround);
+      &:focus {
+        border-color: var(--primary-color);
+        outline: none; /* remove the default blue outline */
+      }
     }
 
-    .show {
-      color: var(--primary-color);
+    .sign-up-password {
+      height: 2rem;
+      border: 3px solid #ccc;
+      border-radius: 4px;
+      margin-bottom: 0.5rem;
+      padding: 0.5rem;
+      font-size: 1rem;
+      // width: 100%;
+      color: var(--accent-backround);
+
+      &:focus {
+        border-color: var(--primary-color);
+        outline: none; /* remove the default blue outline */
+      }
+    }
+
+    .validation {
+      position: absolute;
+      top: 103%;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      color: #9e9d9d;
+      .identifier {
+        color: var(--secondary-color);
+      }
+      p {
+        margin: 0;
+        font-size: 15px;
+      }
+    }
+
+    .sign-up-toggle-password-visibility {
+      position: absolute;
+      top: 65%;
+      width: 2rem;
+      height: 2rem;
+      left: 90%;
+      font-size: 20px;
+
+      .hide {
+        color: var(--secondary-backround);
+      }
+
+      .show {
+        color: var(--primary-color);
+      }
     }
   }
 }
